--- a/example-03-express/package.json
+++ b/example-03-express/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-01-express",
+  "name": "example-03-express",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "moment": "^2.29.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
